--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ header {
   -webkit-backdrop-filter: blur(3px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  position: relative;
   z-index: 1;
 }
 
@@ -147,7 +148,6 @@ main {
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: ;
 }
 
 .dropdown-content a {
@@ -159,7 +159,7 @@ main {
   text-align: left;
 }
 
-.dropdown-content a:hover {
+.dropdown-content div:hover {
   background-color: #ddd;
 }
 
