--- a/main.css
+++ b/main.css
@@ -63,9 +63,12 @@ main {
 .movie {
   width: 300px;
   margin: 1rem;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
   border-radius: 3px;
-  box-shadow: 0.2px 4px 5px rgba(0, 0, 0, 0.1);
-  background-color: var(--secondary-color);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   position: relative;
   overflow: hidden;
 }
@@ -147,7 +150,12 @@ main {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.015);
+  box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .dropdown-content a {
@@ -160,7 +168,7 @@ main {
 }
 
 .dropdown-content div:hover {
-  background-color: #ddd;
+  background-color: rgb(30, 29, 29);
 }
 
 .dropdown:hover .dropdown-content {
