--- a/main.css
+++ b/main.css
@@ -114,11 +114,11 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #fff;
+  background-color: rgb(32, 30, 30);
   padding: 1rem;
-  max-height: 100%;
+  height: 20%;
   transform: translateY(101%);
-  transition: transform 0.3s ease-in;
+  transition: transform 0.1s ease-in;
 }
 
 .movie:hover .overview {
@@ -295,47 +295,4 @@ main {
     top: 15px;
     right: 35px;
   }
-}
-
-.embed.hide {
-  display: none;
-}
-
-.embed.show {
-  display: inline-block;
-}
-
-.arrow {
-  position: absolute;
-  font-size: 40px;
-}
-
-.arrow.left-arrow {
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
-}
-
-.arrow.right-arrow {
-  top: 50%;
-  transform: translateY(-50%);
-  right: 5%;
-}
-
-.dots {
-  margin-top: 30px;
-}
-
-.dots .dot {
-  padding: 5px 15px;
-  border-radius: 50%;
-  border: 5px solid var(--secondary-color);
-  color: white;
-  font-size: 20px;
-  font-weight: 600;
-  margin: 5px;
-}
-
-.dots .dot.active {
-  border-color: orange;
 }
