--- a/main.css
+++ b/main.css
@@ -255,12 +255,27 @@ main {
 /* Position the content inside the overlay */
 .overlay-content {
   position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
   top: 10%; /* 25% from the top */
   width: 100%; /* 100% width */
   text-align: center; /* Centered text/links */
   margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
-
+.overlay-text {
+  display: flex;
+}
+.overlay-right {
+  display: flex;
+  flex-direction: column;
+}
+.overlay-video {
+  min-width: 50vw;
+  min-height: 50vh;
+}
+.overlay-overview {
+}
 /* The navigation links inside the overlay */
 .overlay a {
   padding: 8px;
