--- a/main.css
+++ b/main.css
@@ -61,8 +61,9 @@ main {
 }
 
 .movie {
-  width: 300px;
-  margin: 1rem;
+  width: 15vw;
+  height: 30vw;
+  margin: 1vw;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(3px);
@@ -116,7 +117,7 @@ main {
   bottom: 0;
   background-color: rgb(32, 30, 30);
   padding: 1rem;
-  height: 20%;
+  height: 25%;
   transform: translateY(101%);
   transition: transform 0.1s ease-in;
 }
@@ -271,10 +272,13 @@ main {
   flex-direction: column;
 }
 .overlay-video {
-  min-width: 50vw;
-  min-height: 50vh;
+  width: 50vw;
+  height: 50vh;
+  margin: auto 5vw auto 5vw;
 }
 .overlay-overview {
+  max-width: 50vw;
+  margin-right: 5vw;
 }
 /* The navigation links inside the overlay */
 .overlay a {
