--- a/main.css
+++ b/main.css
@@ -9,11 +9,7 @@
   --secondary-color: #373b69;
 }
 html {
-  background: url(/images/login.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-color: black;
 }
 body {
   font-family: "Poppins", sans-serif;
@@ -64,8 +60,10 @@ main {
   width: 15vw;
   height: 30vw;
   margin: 1vw;
+  min-width: 250px;
+  min-height: 500px;
   background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
   border-radius: 3px;
@@ -139,6 +137,7 @@ main {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  width: 170px;
 }
 
 .navbar a:hover,
@@ -149,14 +148,8 @@ main {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: black;
   min-width: 160px;
-  background: rgba(255, 255, 255, 0.015);
-  box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(3px);
-  -webkit-backdrop-filter: blur(3px);
-
-  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .dropdown-content a {
@@ -166,10 +159,6 @@ main {
   text-decoration: none;
   display: block;
   text-align: left;
-}
-
-.dropdown-content div:hover {
-  background-color: rgb(30, 29, 29);
 }
 
 .dropdown:hover .dropdown-content {
@@ -188,13 +177,15 @@ main {
 .tag {
   color: white;
   padding: 10px 20px;
-  background-color: orange;
-  border-radius: 50px;
-  margin: 5px;
+  width: 160px;
+  margin: 2px;
   display: inline-block;
   cursor: pointer;
+  transition: 0.05s;
 }
-
+.tag:hover {
+  transform: scale(1.1);
+}
 .tag.highlight {
   background-color: red;
 }
