--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
+  /* pointer-events: visible; */
+  overflow: scroll;
 }
 
 header {
@@ -30,6 +32,7 @@ header {
   position: relative;
   z-index: 1;
 }
+
 
 .search {
   background-color: transparent;
@@ -296,6 +299,7 @@ main {
   font-size: 60px;
 }
 
+
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
   .overlay a {
@@ -311,7 +315,7 @@ main {
 /* loginpage */
 
 .BOX {
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.7);
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -390,5 +394,16 @@ input {
 	cursor: pointer;
 	
 }
+
+.LOgin{
+  background: none;
+  color: white;
+  height: 50px;
+  width: 50px;
+  border: none;
+  font-size: 1.2rem;
+}
+
+
 
 
