--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -32,7 +32,24 @@ header {
   position: relative;
   z-index: 1;
 }
+.button3 {
+  background-color: rgb(22, 18, 18);
+  color: white;
+  border: 2px solid #f44336;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
 
+.button3:hover {
+  background-color: #f44336;
+  color: white;
+}
 
 .search {
   background-color: transparent;
@@ -317,7 +334,6 @@ main {
   font-size: 60px;
 }
 
-
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
   .overlay a {
@@ -330,171 +346,14 @@ main {
   }
 }
 
-/* loginpage */
-
-.BOX {
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  display: none;
-  justify-content: center;
-  align-items: center;
-	background-color: rgba(0, 0, 0, 0.7);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	display: none;
-	justify-content: center;
-	align-items: center;
-}
-
-.BOX-items {
-  /* border: 2px solid white; */
-  height: 300px;
-  width: 500px;
-  background-color: white;
-  /* background-color: transparent; */
-  text-align: center;
-  padding: 20px;
-  position: relative;
-  border-radius: 4px;
- 
-	height: 20rem;
-	width: 30rem;
-	background-color: white;
-  
-	text-align: center;
-	padding: 20px;
-	position: relative;
-	border-radius: 4px;
-}
-
-
-
-input {
-  margin: 15px auto;
-  display: block;
-  width: 50%;
-  padding: 8px;
-  border: 1px solid gray;
-	margin: 15px auto;
-	display: block;
-	width: 50%;
-	padding: 8px;
-	border: 1px solid gray;
-  border-radius: 5px;
-  font-weight: bold;
-}
-
-.close {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  font-size: 20px;
-  color: #333;
-	position: absolute;
-	top: 0;
-  
-	right: 10px;
-	font-size: 24px;
-	color: #333;
-
-  cursor: pointer;
-	cursor: pointer;
-  transform: rotate(45deg);
-	
-	
-	
-	
-}
-
-.white {
+h1 {
   color: white;
-}
-
-.BOX2 {
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.BOX-items2 {
-  height: 450px;
-  width: 500px;
-  background-color: white;
-  /* background-color: transparent; */
-  text-align: center;
-  padding: 20px;
-  position: relative;
-  border-radius: 4px;
-	height: 22em;
-	width: 32em;
-  
-	background-color: white;
- 
-	text-align: center;
-	padding: 10px;
-	position: relative;
-	border-radius: 4px;
-}
-
-.close2 {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  font-size: 20px;
-  color: #333;
-	position: absolute;
-	top: 0;
-	right: 10px;
-	font-size: 24px;
-	color: #333;
-
-  cursor: pointer;
-	cursor: pointer;
-  cursor: pointer;
-  transform: rotate(45deg);
-	
-}
-
-.LOgin{
-  background: none;
-  color: white;
-  height: 50px;
-  width: 50px;
-  border: none;
-  font-size: 1.2rem;
-}
-
-.button{
-  width: 6rem;
-  height: 2rem;
-  border-radius: 5px;
-  background-color: rgb(108, 108, 204);
-  color: white;
-  font-size:1em;
   font-family: "Poppins", sans-serif;
-  cursor: pointer;
-}
-h1{
-  color: white;
-  font-family:"Poppins", sans-serif ;
   font-weight: 2px;
   position: relative;
   margin-top: 0;
   font-size: 2.5em;
 }
-h1:hover{
- color: rgb(148, 148, 241);
+h1:hover {
+  color: rgb(148, 148, 241);
 }
-
-
-
