--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -22,7 +22,7 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   background: rgba(255, 255, 255, 0.015);
   box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(3px);
@@ -31,19 +31,102 @@ header {
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: relative;
   z-index: 1;
+  /* width: 100%; */
+  max-width: 100vw;
 }
-.button3 {
-  background-color: rgb(22, 18, 18);
+ul{
+  display: flex;
+  gap: 0.5em;
+  width: 100%;
+  /* float: right;*/
+} 
+
+.logo{
+  width: 100%;
+}
+
+.li{
+  display: inline-block;
+  margin:0 0.3em;
+}
+.checkbtn{
+  font-size: 30px;
   color: white;
-  border: 2px solid #f44336;
-  padding: 16px 32px;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+@media(max-width:820px){
+  ul{
+    gap: 0.2em;
+    width: 100%;
+  }
+ 
+
+
+}
+@media (max-width: 650px){
+  .checkbtn{
+    display: block;
+    
+  }
+  ul{
+    position: fixed;
+    width: 70%;
+    height: 100vh;
+    
+    /* background: #2c3e50; */
+    background: black;
+    top: 80px;
+    left: -100%;
+    text-align: start;
+    transition: all .5s;
+    display: flex;
+    flex-direction: column;
+    
+  }
+   .li{
+    display: block;
+    margin: 25px 0;
+    line-height: 30px;
+  }
+  .search{
+    margin-left: 2em;
+    width: 20rem;
+  }
+  /* nav ul li a{
+    font-size: 20px;
+  } */
+  /* a:hover,a.active{
+    background: none;
+    color: #0082e6;
+  } */
+  #check:checked ~ ul{
+    left: 0;
+
+  }
+
+}
+
+.button3 {
+  /* background-color: rgb(22, 18, 18); */
+  background: transparent;
+  color: white;
+  /* border: 2px solid #f44336; */
+  padding: 14px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  /* margin: 3px 2px; */
   transition-duration: 0.4s;
   cursor: pointer;
+  width: 170px;
 }
 
 .button3:hover {
@@ -52,13 +135,16 @@ header {
 }
 
 .search {
+  box-sizing: border-box;
   background-color: transparent;
   border: 2px solid var(--primary-color);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem .5rem;
   border-radius: 50px;
   font-size: 1rem;
   color: #fff;
-  font-family: inherit;
+  font-family:'Font Awesome 5 Free';
+  font-weight: 700;
+  
 }
 
 .search:focus {
@@ -68,6 +154,12 @@ header {
 
 .search::placeholder {
   color: white;
+}
+@media(max-width:790px){
+  .search{
+    width:7rem;
+  }
+  
 }
 
 main {
@@ -295,20 +387,26 @@ main {
   margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 .overlay-text {
+  
   display: flex;
+  justify-content: center;
+  max-width: 100%;
+  gap: 3em;
 }
 .overlay-right {
   display: flex;
   flex-direction: column;
+  
+  width: 100%;
+  margin-right: 3em;
 }
 .overlay-video {
-  width: 50vw;
+  
+  width: 100%;
   height: 50vh;
-  margin: auto 5vw auto 5vw;
-}
-.overlay-overview {
-  max-width: 50vw;
-  margin-right: 5vw;
+  margin-left: 3em;
+  
+ 
 }
 /* The navigation links inside the overlay */
 .overlay a {
@@ -333,6 +431,37 @@ main {
   right: 45px;
   font-size: 60px;
 }
+@media (max-width:650px){
+  .overlay-text{
+    display: flex;
+    flex-direction: column;
+  align-content: center;
+    width: 100%;
+    position: absolute;
+    padding: 4rem;
+  }
+
+  .overlay-video{
+    width: 100%;
+    margin-left: 0.5em;
+    margin-right: 4em;
+  }
+  .overlay-overview{
+    margin: 0 2em;
+
+  }
+  .overlay-title{
+    margin-top: 1em;
+    font-size: 0.8em;
+  }
+  .button3:hover {
+    background-color: #f44336;
+    color: white;
+  }
+ 
+  
+}
+
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
@@ -353,6 +482,7 @@ h1 {
   position: relative;
   margin-top: 0;
   font-size: 2.5em;
+  /* float: left; */
 }
 h1:hover {
   color: rgb(148, 148, 241);
