--- a/pages/booking/style.css
+++ b/pages/booking/style.css
@@ -1,60 +1,80 @@
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap'); */
 
 * {
   box-sizing: border-box;
 }
 
-.main-logo {
-  width: 90%;
-  max-width: 150px;
-}
-
 body {
-  background-color: #000000;
+  font-family: "Lato", sans-serif;
+  /* background-color: #242333; */
+  /* background: url("myke-simon-atsUqIm3wxo-unsplash.jpg"),
+        linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, 0.9)); */
+  background: linear-gradient(rgba(0, 18, 50, 0.84), rgba(0, 0, 0, 0.95)),
+    url("/assets/lloyd-dirks-4SLz_RCk6kQ-unsplash.jpg") bottom;
+  background-size: cover;
   color: #fff;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  font-family: "Lato", sans-serif;
-  margin: 0;
+  align-items: center;
+  background-color: rgb(0, 18, 50);
+  padding-top: 25px;
 }
-
+.whole {
+  display: flex;
+}
 .movie-container {
   margin: 20px 0;
 }
-h1 {
-  color: white;
-}
+
 .movie-container select {
   background-color: #fff;
+  font-family: "Lato", sans-serif;
   border: 0;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 18px;
+  outline: none;
   margin-left: 10px;
   padding: 5px 15px 5px 15px;
-  -moz-appearance: none;
   -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
+  /* Will remove the browser style and let you use your own style */
 }
 
 .container {
+  /*  it simply enables a 3D-space for children elements. */
   perspective: 1000px;
-  margin-bottom: 30px;
+  -webkit-perspective: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.row-container {
+  margin-top: 30px;
 }
 
 .seat {
   background-color: #444451;
   height: 12px;
   width: 15px;
-  margin: 3px;
+  margin: 5px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+
+  height: 30px;
+  width: 35px;
+  background: #01163e;
+  border: 2px solid #314c81;
+  transition: all 0.2s ease;
 }
 
 .seat.selected {
   background-color: #6feaf6;
+  background-color: #31d7a9;
 }
 
 .seat.occupied {
@@ -70,6 +90,7 @@ h1 {
 }
 
 .seat:not(.occupied):hover {
+  /* Selecting seats that do not have "occupied" class */
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -80,7 +101,7 @@ h1 {
 }
 
 .showcase {
-  background: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
   border-radius: 5px;
   color: #777;
@@ -118,20 +139,111 @@ p.text {
 }
 
 p.text span {
-  color: #6feaf6;
+  color: #6feaf5;
 }
 
-/* body{
-        transform: scale(1.4);
-      } */
-
-.status {
-  color: white;
+.movie-screen {
+  margin-top: 35px;
+  margin-bottom: 35px;
+  text-align: center;
 }
 
-.nav-link {
-  color: white !important;
-  font-weight: 500 !important;
+.movie-screen img {
+  max-width: 85%;
+}
+
+.subtitle {
+  position: relative;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px;
+  color: #31d7a9;
+  font-size: 16px;
+  max-width: 270px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.subtitle:before,
+.subtitle:after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  height: 1px;
+  background: #213a69;
+}
+
+.subtitle:before {
+  width: 80%;
+  top: 0;
+}
+
+.subtitle:after {
+  width: 100%;
+  bottom: 0;
+}
+
+.text {
+  font-size: 18px;
+}
+
+#count,
+#total {
+  font-size: 24px;
+  padding: 0 8px;
+}
+
+.text-wrapper {
+  margin-top: 10px;
+}
+
+@media (max-width: 576px) {
+  body {
+    padding-top: 30px;
+  }
+
+  .movie-container select {
+    font-size: 14px;
+  }
+
+  .seat {
+    height: 21px;
+    width: 23px;
+  }
+
+  .movie-screen img {
+    max-width: 92%;
+  }
+
+  .subtitle {
+    font-size: 13px;
+    padding: 7px;
+  }
+
+  .seat:nth-of-type(2) {
+    margin-right: 12px;
+  }
+
+  .seat:nth-last-of-type(2) {
+    margin-left: 12px;
+  }
+
+  .movie-screen {
+    margin-top: 25px;
+    margin-bottom: 20px;
+  }
+
+  .text {
+    font-size: 14px;
+  }
+
+  #count,
+  #total {
+    font-size: 18px;
+  }
 }
 
 .btn-home {
