--- a/pages/booking/style.css
+++ b/pages/booking/style.css
@@ -1,80 +1,62 @@
 @import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
-/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap'); */
 
 * {
   box-sizing: border-box;
 }
 
+.main-logo {
+  width: 90%;
+  max-width: 150px;
+}
+
 body {
-  font-family: "Lato", sans-serif;
-  /* background-color: #242333; */
-  /* background: url("myke-simon-atsUqIm3wxo-unsplash.jpg"),
-        linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, 0.9)); */
-  background: linear-gradient(rgba(0, 18, 50, 0.84), rgba(0, 0, 0, 0.95)),
-    url("/assets/lloyd-dirks-4SLz_RCk6kQ-unsplash.jpg") bottom;
-  background-size: cover;
+  background-color: #000000;
   color: #fff;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* flex-direction: column; */
   align-items: center;
-  background-color: rgb(0, 18, 50);
-  padding-top: 25px;
+  justify-content: center;
+  height: 100vh;
+  font-family: "Lato", sans-serif;
+  margin: 0;
 }
-.whole {
-  display: flex;
-}
+
 .movie-container {
   margin: 20px 0;
 }
-
+h1 {
+  color: white;
+}
 .movie-container select {
   background-color: #fff;
-  font-family: "Lato", sans-serif;
   border: 0;
   border-radius: 5px;
-  font-size: 18px;
-  outline: none;
+  font-size: 14px;
   margin-left: 10px;
   padding: 5px 15px 5px 15px;
-  -webkit-appearance: none;
   -moz-appearance: none;
+  -webkit-appearance: none;
   appearance: none;
-  /* Will remove the browser style and let you use your own style */
 }
 
 .container {
-  /*  it simply enables a 3D-space for children elements. */
+ align-items: center;
   perspective: 1000px;
-  -webkit-perspective: 1000px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.row-container {
-  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .seat {
   background-color: #444451;
-  height: 12px;
-  width: 15px;
-  margin: 5px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-
   height: 30px;
-  width: 35px;
-  background: #01163e;
-  border: 2px solid #314c81;
-  transition: all 0.2s ease;
+  width: 30px;
+  margin: 5px;
+  border-radius: 5px;
+  /* border-top-left-radius: 15px;
+  border-top-right-radius: 15px; */
 }
 
 .seat.selected {
-  background-color: #6feaf6;
-  background-color: #31d7a9;
+  background-color: rgb(69, 69, 185);
 }
 
 .seat.occupied {
@@ -90,7 +72,6 @@ body {
 }
 
 .seat:not(.occupied):hover {
-  /* Selecting seats that do not have "occupied" class */
   cursor: pointer;
   transform: scale(1.2);
 }
@@ -101,7 +82,7 @@ body {
 }
 
 .showcase {
-  background-color: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
   border-radius: 5px;
   color: #777;
@@ -123,6 +104,7 @@ body {
 
 .row {
   display: flex;
+  justify-content: center;
 }
 
 .screen {
@@ -139,111 +121,20 @@ p.text {
 }
 
 p.text span {
-  color: #6feaf5;
+  color: #6feaf6;
 }
 
-.movie-screen {
-  margin-top: 35px;
-  margin-bottom: 35px;
-  text-align: center;
+/* body{
+        transform: scale(1.4);
+      } */
+
+.status {
+  color: white;
 }
 
-.movie-screen img {
-  max-width: 85%;
-}
-
-.subtitle {
-  position: relative;
-  text-align: center;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 10px;
-  color: #31d7a9;
-  font-size: 16px;
-  max-width: 270px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.subtitle:before,
-.subtitle:after {
-  position: absolute;
-  content: "";
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  height: 1px;
-  background: #213a69;
-}
-
-.subtitle:before {
-  width: 80%;
-  top: 0;
-}
-
-.subtitle:after {
-  width: 100%;
-  bottom: 0;
-}
-
-.text {
-  font-size: 18px;
-}
-
-#count,
-#total {
-  font-size: 24px;
-  padding: 0 8px;
-}
-
-.text-wrapper {
-  margin-top: 10px;
-}
-
-@media (max-width: 576px) {
-  body {
-    padding-top: 30px;
-  }
-
-  .movie-container select {
-    font-size: 14px;
-  }
-
-  .seat {
-    height: 21px;
-    width: 23px;
-  }
-
-  .movie-screen img {
-    max-width: 92%;
-  }
-
-  .subtitle {
-    font-size: 13px;
-    padding: 7px;
-  }
-
-  .seat:nth-of-type(2) {
-    margin-right: 12px;
-  }
-
-  .seat:nth-last-of-type(2) {
-    margin-left: 12px;
-  }
-
-  .movie-screen {
-    margin-top: 25px;
-    margin-bottom: 20px;
-  }
-
-  .text {
-    font-size: 14px;
-  }
-
-  #count,
-  #total {
-    font-size: 18px;
-  }
+.nav-link {
+  color: white !important;
+  font-weight: 500 !important;
 }
 
 .btn-home {
@@ -254,8 +145,172 @@ p.text span {
   font-size: 1em;
   font-weight: 600;
   cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: white;
+  
 }
 
 .btn-home:active {
   border: 0px solid #e50914;
 }
+@media(max-width:700px){
+  body{
+  flex-direction: column;
+  }
+  .img{
+    width: 300px;
+  }
+  .seat{
+    height: 20px;
+    width: 20px;
+    margin: 3px;
+  }
+  h2{
+    font-size: 1.4em;
+  }
+  
+
+}
+
+.BOX {
+	background-color: rgba(0, 0, 0, 0.7);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.BOX-items {
+ 
+	height: 27rem;
+	width: 30rem;
+	background-color: white;
+  
+	text-align: center;
+	padding: 20px;
+	position: relative;
+	border-radius: 4px;
+}
+
+
+
+input {
+	margin: 15px auto;
+	display: block;
+	width: 50%;
+	padding: 8px;
+	border: 1px solid gray;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.close {
+	position: absolute;
+	top: 0;
+  
+	right: 10px;
+	font-size: 24px;
+	color: #333;
+
+	cursor: pointer;
+  transform: rotate(45deg);
+	
+	
+	
+	
+}
+
+.white{
+  color: white;
+}
+
+/* .BOX2 {
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.BOX-items2 {
+	height: 22em;
+	width: 32em;
+  
+	background-color: white;
+ 
+	text-align: center;
+	padding: 10px;
+	position: relative;
+	border-radius: 4px;
+}
+
+
+
+.close2 {
+	position: absolute;
+	top: 0;
+	right: 10px;
+	font-size: 24px;
+	color: #333;
+
+	cursor: pointer;
+  cursor: pointer;
+  transform: rotate(45deg);
+	
+} */
+
+.LOgin{
+  background: red;
+  color: white;
+  border: 1px solid #e50914;
+  /* padding: 0.3em 2em; */
+  width: 8rem;
+  height: 2.5rem;
+  border-radius: 10px;
+  font-size: 1em;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 14px;
+  /* height: 50px;
+  width: 50px; */
+  /* border: none; */
+  /* font-size: 1.2rem; */
+}
+
+.button{
+  width: 6rem;
+  height: 2rem;
+  border-radius: 5px;
+  background-color: rgb(108, 108, 204);
+  color: white;
+  font-size:1em;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+}
+h1{
+  color: white;
+  font-family:"Poppins", sans-serif ;
+  font-weight: 2px;
+  position: relative;
+  margin-top: 0;
+  font-size: 2.5em;
+}
+h1:hover{
+ color: rgb(148, 148, 241);
+}
+h3{
+  color:black;
+}
+
+.subdate{
+  display: flex;
+}
+
