--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -43,6 +43,7 @@ ul{
 
 .logo{
   width: 100%;
+  text-decoration: none;
 }
 
 .li{
@@ -145,6 +146,10 @@ ul{
   font-family:'Font Awesome 5 Free';
   font-weight: 700;
   
+}
+a{
+  text-decoration: none;
+  color: white;
 }
 
 .search:focus {
@@ -483,7 +488,4 @@ h1 {
   margin-top: 0;
   font-size: 2.5em;
   /* float: left; */
-}
-h1:hover {
-  color: rgb(148, 148, 241);
 }
