--- a/pages/booking/style.css
+++ b/pages/booking/style.css
@@ -13,7 +13,6 @@ body {
   background-color: #000000;
   color: #fff;
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -51,8 +50,7 @@ h1 {
   width: 30px;
   margin: 5px;
   border-radius: 5px;
-  /* border-top-left-radius: 15px;
-  border-top-right-radius: 15px; */
+ 
 }
 
 .seat.selected {
@@ -124,9 +122,6 @@ p.text span {
   color: #6feaf6;
 }
 
-/* body{
-        transform: scale(1.4);
-      } */
 
 .status {
   color: white;
@@ -168,7 +163,14 @@ p.text span {
     margin: 3px;
   }
   h2{
-    font-size: 1.4em;
+    display: none;
+    
+  }
+  .title1{
+    font-size: 1.7em;
+  }
+  .image{
+    text-align: center;
   }
   
 
@@ -229,49 +231,12 @@ input {
   color: white;
 }
 
-/* .BOX2 {
-	background-color: rgba(0, 0, 0, 0.5);
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	display: none;
-	justify-content: center;
-	align-items: center;
-}
-
-.BOX-items2 {
-	height: 22em;
-	width: 32em;
-  
-	background-color: white;
- 
-	text-align: center;
-	padding: 10px;
-	position: relative;
-	border-radius: 4px;
-}
-
-
-
-.close2 {
-	position: absolute;
-	top: 0;
-	right: 10px;
-	font-size: 24px;
-	color: #333;
-
-	cursor: pointer;
-  cursor: pointer;
-  transform: rotate(45deg);
-	
-} */
 
 .LOgin{
   background: red;
   color: white;
   border: 1px solid #e50914;
-  /* padding: 0.3em 2em; */
+  
   width: 8rem;
   height: 2.5rem;
   border-radius: 10px;
@@ -279,10 +244,7 @@ input {
   font-weight: 600;
   cursor: pointer;
   margin-top: 14px;
-  /* height: 50px;
-  width: 50px; */
-  /* border: none; */
-  /* font-size: 1.2rem; */
+  
 }
 
 .button{
