--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -15,14 +15,13 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
-  /* pointer-events: visible; */
   overflow: scroll;
 }
 
 header {
   padding: 1rem;
   display: flex;
-  /* justify-content: space-around; */
+  
   background: rgba(255, 255, 255, 0.015);
   box-shadow: 0 4px 18px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(3px);
@@ -31,14 +30,14 @@ header {
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: relative;
   z-index: 1;
-  /* width: 100%; */
+ 
   max-width: 100vw;
 }
 ul{
   display: flex;
   gap: 0.5em;
   width: 100%;
-  /* float: right;*/
+ 
 } 
 
 .logo{
@@ -81,7 +80,7 @@ ul{
     width: 70%;
     height: 100vh;
     
-    /* background: #2c3e50; */
+    
     background: black;
     top: 80px;
     left: -100%;
@@ -100,13 +99,7 @@ ul{
     margin-left: 2em;
     width: 20rem;
   }
-  /* nav ul li a{
-    font-size: 20px;
-  } */
-  /* a:hover,a.active{
-    background: none;
-    color: #0082e6;
-  } */
+  
   #check:checked ~ ul{
     left: 0;
 
@@ -115,19 +108,20 @@ ul{
 }
 
 .button3 {
-  /* background-color: rgb(22, 18, 18); */
+  
   background: transparent;
   color: white;
-  /* border: 2px solid #f44336; */
+
   padding: 14px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  /* margin: 3px 2px; */
+  
   transition-duration: 0.4s;
   cursor: pointer;
-  width: 170px;
+  
+  width: fit-content;
 }
 
 .button3:hover {
@@ -145,7 +139,7 @@ ul{
   color: #fff;
   font-family:'Font Awesome 5 Free';
   font-weight: 700;
-  
+  margin-top: 4px;
 }
 a{
   text-decoration: none;
@@ -251,7 +245,7 @@ main {
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding: 12px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -362,6 +356,29 @@ main {
   margin-top: 10px;
   transition: 0.1s;
 }
+.logout{
+  
+  background: transparent;
+  color: white;
+  
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+ 
+  transition-duration: 0.4s;
+  cursor: pointer;
+  width: fit-content;
+  border: none;
+ 
+}
+.logout:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+
 .booknow:hover {
   transform: scale(1.1);
 }
@@ -463,6 +480,12 @@ main {
     background-color: #f44336;
     color: white;
   }
+  .logout{
+    margin-left: 44px;
+  }
+  .button3{
+    margin-left: 44px;
+  }
  
   
 }
@@ -487,5 +510,5 @@ h1 {
   position: relative;
   margin-top: 0;
   font-size: 2.5em;
-  /* float: left; */
+  
 }
